--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "load-grunt-config": "~0.13.1",
     "shelljs": "~0.3.0",
     "handlebars": "~1.3.0",
-    "grunt-contrib-concat": "~0.5.0"
+    "grunt-contrib-concat": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1"
   },
   "repository": {
     "type": "git",
